--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,15 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: "androidx.navigation.safeargs.kotlin"
+
+apply plugin: 'kotlin-kapt'
+
 apply from: './dependencies.gradle'
 
 android {
     compileSdkVersion 29
-    buildToolsVersion "29.0.1"
+    buildToolsVersion "29.0.2"
     defaultConfig {
         applicationId "br.com.isgreen.calculatorsimulator"
         minSdkVersion 16
@@ -39,9 +43,16 @@ android {
         unitTests.returnDefaultValues = true
     }
 
+    kapt {
+        generateStubs = true
+    }
+
     androidExtensions {
         experimental = true
     }
 
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
 
